--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ nav > li {
     text-transform: uppercase;
 }
 
+nav ul {
+    padding: 0;
+    width: 570px;
+    margin: 72px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
 a {
     color: #7D7D7D;
     text-decoration: none;
@@ -22,6 +30,20 @@ a {
 a:hover {
     color: #03A9F4;
 }
+
+.card {
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card ul {
+    margin: 0 30px;
+    padding: 0 0 60px 0;
+    width: 420px;
+}
+
 
 .card h3 {
     font-family: 'Ubuntu', sans-serif;
@@ -59,5 +81,12 @@ button {
     color: #626262;
     border: #626262 1px solid;
     background-color: transparent;
-    padding: 28px 48px;
+    padding: 22px 48px;
+    cursor: pointer;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    margin: 34px 0 60px 0;
 }
